
	* hw/xfree86/common/xisb.c:
	* hw/xfree86/common/xisb.h:
	Remove libc wrapper types from Xisb interfaces.

2006-04-07  Daniel Stone  <daniel@freedesktop.org>

	* hw/xfree86/utils/xorgcfg/keyboard-cfg.c:
	Coverity #1216: Fix double-close of file on error.

	* xkb/xkbEvents.c:
	Coverity #987: Avoid potential NULL dereference.

	* xkb/xkb.c:
	Coverity #844, #845, #846: Fix memory leaks.

2006-04-06  Keith Packard  <keithp@keithp.com>

	* fb/fbstipple.c: (fbEvenStipple):
	Coverity #333, #334 - eliminate unncessary test
	for always true condition in fbEvenStipple.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/parser/Monitor.c:
	Coverity #488: Avoid smashing an array on malformed config 
	files.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/glxProxy/glxsingle.c:
	Coverity #769: Fix a potential memory leak for systems that 
	allocate on malloc(0)

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Coverity #838: Plug two more memory leaks.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Coverity #837: Fix another another memory leak.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Coverity #836: Fix another memory leak.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Coverity #835: Plug memory leak in extension section parsing.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/parser/Keyboard.c:
	Coverity #812: Fix parser memory leak.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/dixmods/extmod/xf86vmode.c:
	Coverity #818: Avoid memory leak on error path.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* GL/glx/single2.c:
	Coverity #985: Avoid segfault on malloc failure.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/dmxextension.c:
	Coverity #1037: Sanity check idx before use.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>
